# test-mcp-server-building

20250406-go/: main.go
20260419-fastmcp-googleauth/: compose.yml  main.py
20260421-fasemcp-googleauth-bq/: Dockerfile  README.md  main.py  pyproject.toml
20260421-fasemcp-googleauth-bq/deployments/k8s/: deployment.yml  kustomization.yml
20260430-fastmcp-googleauth-with-group/: Dockerfile  README.md  main.py  pyproject.toml  run.sh  test_admin_directory.py  test_cloud_identity.py
20260430-fastmcp-googleauth-with-group/deployments/k8s/: service.yml
