[project]
name = "20260419-fastmcp-googleauth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.2.4",
    "google-api-python-client>=2.194.0",
    "google-auth>=2.49.2",
    "google-cloud-bigquery>=3.41.0",
]
